Fix landing page alignment

--- a/app/styles/_slides.scss
+++ b/app/styles/_slides.scss
@@ -13,21 +13,14 @@
 }
 
 .slide-intro {
-  background: $light-blue;
-  padding: 0 2em;
-  @include clearfix;
-
-  &.swiper-slide {
-    flex-direction: row;
-  }
+  background-color: $light-blue;
 
   &__art {
     width: 40%;
-    float: left;
 
-    svg {
+    & svg {
       width: 100%;
-      height: 100%;
+      vertical-align: bottom;
     }
   }
 
@@ -35,6 +28,12 @@
     width: 60%;
     float: right;
     text-align: center;
+
+    &.swiper-slide__section {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &__title {
